Closed Bug 1326367 Opened 9 years ago Closed 9 years ago

Failures on OSX+NV in 2.0.0/conformance/attribs/gl-disabled-vertex-attrib.html

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- wontfix
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

(Blocks 1 open bug)

Details

(Whiteboard: gfx-noted)

Attachments

(1 file)

Try seems immune. Locally WebGL 2 only runs on NV, not Intel. We do run webgl2 on core profiles, and webgl1 on compat profiles, fwiw. I suspect this is NV only.
See Also: → 1326171
Blocks: webgl200
Comment on attachment 8822610 [details] Bug 1326367 - Fix FakeVertex0 and enable emulation for OSX+NV+Core profiles. - https://reviewboard.mozilla.org/r/101480/#review102160
Attachment #8822610 - Flags: review?(ethlin) → review+
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/45f06f692bef Fix FakeVertex0 and enable emulation for OSX+NV+Core profiles. - r=ethlin
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
jeff, is that something you want to uplift in 52? Thanks
Flags: needinfo?(jgilbert)
Yes.
Flags: needinfo?(jgilbert)
Comment on attachment 8822610 [details] Bug 1326367 - Fix FakeVertex0 and enable emulation for OSX+NV+Core profiles. - Approval Request Comment [Feature/Bug causing the regression]: [User impact if declined]: Some unusual API usage won't render properly on OSX. [Is this code covered by automated tests?]: [Has the fix been verified in Nightly?]: [Needs manual test from QE? If yes, steps to reproduce]: [List of other uplifts needed for the feature/fix]: [Is the change risky?]: [Why is the change risky/not risky?]: [String changes made/needed]:
Attachment #8822610 - Flags: approval-mozilla-beta?
Comment on attachment 8822610 [details] Bug 1326367 - Fix FakeVertex0 and enable emulation for OSX+NV+Core profiles. - fix a webgl2 issue on osx/nvidia, beta52+
Attachment #8822610 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: