Bug 1326367 - Fix FakeVertex0 and enable emulation for OSX+NV+Core profiles. - r=ethlin

MozReview-Commit-ID: IafpirHZroB